--- a/roles/check_win_updates/templates/consolidated_vms_report.html.j2
+++ b/roles/check_win_updates/templates/consolidated_vms_report.html.j2
@@ -7,6 +7,11 @@
    <body>
       <table border = "1" cellpadding = "5" cellspacing = "5">
          <tr>
+            <th colspan="2">
+               <img src="{{ v_logo_url }}">
+            </th>
+         </tr>
+         <tr>
             <th>Windows VM</th>
             <th>List of Required Updates/Packages</th>
          </tr>
