Ajuste Logo Template

--- a/roles/check_win_updates/templates/consolidated_vms_report.html.j2
+++ b/roles/check_win_updates/templates/consolidated_vms_report.html.j2
@@ -8,7 +8,7 @@
       <table border = "1" cellpadding = "5" cellspacing = "5">
          <tr>
             <th colspan="2">
-               <img src="{{ v_logo_url }}">
+               <img src="{{ logo_url }}">
             </th>
          </tr>
          <tr>
